# mailer

./: MANIFEST.in  README.rst  pyproject.toml  setug.cfg
mail_app/: asgi.py  settings.py  urls.py  wsgi.py
mailer/: admin.py  core.py  models.py  settings.py  utils.py
mailer/management/commands/: send_mail.py  send_test_mail.py
mailer/migrations/: 0001_initial.py  0002_message_context_message_to.py
mailer/templates/mailer/: test_mail.html  test_mail.txt
