[project]
name = "mailer"
version = "0.0.1"
authors = [
  { name="Example Author", email="author@example.com" },
]
description = "Django package to send emails via mailjet."
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
[build-system]
requires = ['setuptools==60.0.0', 'wheel']
build-backend = 'setuptools.build_meta:__legacy__'
[tool.setuptools]
py-modules = []