[project]
name = "mailer"
version = "0.0.1"
authors = [
  { name="Example Author", email="author@example.com" },
]
description = "A small example package"
readme = "README.rst"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "django>=4.0",
    "django-anymail[mailgun]",
    "requests>=2.4.3"
]
[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"